--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "expo": "~50.0.3",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "0.73.2",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.1.1",
+    "expo-image": "~1.10.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
