--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.73.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "^15.0.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
